--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,13 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
   height: 100%;
+  overflow: hidden;
 }
 
 div {
