--- a/src/style.css
+++ b/src/style.css
@@ -12,3 +12,12 @@ a {
   color: #000;
   text-decoration: none;
 }
+
+session {
+  display: block;
+  box-sizing: border-box;
+  border-radius: 10px;
+  margin: 20px 30px;
+  padding: 30px;
+  background-color: #fff;
+}
